# agentic-ai-poc

./: .gitignore  README.md  docker-compose.yml  main.py  mock_external_apis.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_memory_constructs.py
.augment/rules/: allways_follow.md  python.md
config/: moveworks_config.yml
docs/: README.md  code-improvement-prompt.md  memory-constructs.md  moveworks-action-items-tracker.md  moveworks-agentic-reasoning-engine.md  moveworks-agentic-reasoning-overview.md  moveworks-implementation-guide.md  moveworks-project-management-prompt.md  moveworks-quick-commands.md  moveworks-reasoning-agent-review-tracker.md  moveworks-technical-comparison.md  plugin-selection.md  plugin-similarity-search.md  reasoning-loops.md
docs/actions/: README.md
docs/data-types/: README.md
docs/resolver-strategies/: README.md
docs/slots/: README.md
frontend/: next.config.js  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: init_db.sql  setup_database.py
src/actions/: builtin_actions.py
src/ag_ui_server/: __init__.py  main.py
src/agent/: conversational_agent.py
src/agent_studio/: __init__.py  api.py  database.py  langgraph_integration.py  models.py
src/config/: loader.py  reasoning_config.py
src/connectors/: base_connector.py  moveworks_connectors.py
src/embeddings/: __init__.py  process_embeddings.py
src/human_in_loop/: __init__.py  tools.py
src/llm/: llm_factory.py  process_matcher.py  resolver_execution_engine.py  slot_inference.py
(+31 files in other folders)
